public/stylesheets/style.css
/* ... */
    /*
    ** Progress Bar
    */
    .progress-bar-container{
      border-bottom: 1px solid #EEEEEE;
      border-top: 1px solid #EEEEEE;
      height: auto;
      margin-bottom: 30px;
      padding-bottom: 20px;
      padding-top: 20px;
      width: 100%;
    }

    .progress-bar{
        height: 36px;
        width: 540px;
        border: 1px solid #DDD;
        padding: 3px;
        position: relative;
        float: left;

        background: #eeeeee; /* old browsers */
        background: -moz-linear-gradient(top, #eeeeee 0%, #E2E2E2 50%, #eeeeee 100%); /* firefox */
        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#eeeeee), color-stop(50%,#E2E2E2), color-stop(100%,#eeeeee)); /* webkit */
        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eeeeee', endColorstr='#eeeeee',GradientType=0 ); /* ie */

         -moz-box-shadow: 0 0 5px #777 inset;
          -webkit-box-shadow: 0 0 5px #777 inset;
          box-shadow: 0 0 5px #777 inset;

    }

    #list-pages .progress-bar{
        width: 525px;
    }

    .pb-value{
        background: url('images/profile_bar_2.jpg') 0 0 repeat-y;
        height: 100%;
     }

    .pb-reflection{
        background-image: -webkit-gradient(
            linear,
            left bottom,
            left top,
            color-stop(0, rgba(235,235,235,.3)),
            color-stop(0.56, rgba(255,255,255, 0)),
            color-stop(1, rgba(245,245,245,.3))
        );
        background-image: -moz-linear-gradient(
            center bottom,
            rgba(235,235,235, .3) 0%,
            rgba(255,255,255, 0) 56%,
            rgba(245,245,245, .3) 100%
        );

         height: 100%;
    }

    .pb-toplanan,
    .pb-hedef {
      color: #444444;
      line-height: 42px;
      position: absolute;
      text-shadow: 0 0 1px #AAAAAA;
      top: 0;
    }

    .pb-toplanan{
      left: 10px;
    }

    .pb-hedef {
      right: 10px;
    }

    .pb-action{
      float: right;
    }


    /*
     * PROGRESS BAR - SMALL
     */
    .pb-small {
      width: 206px;
      font-size: 11px;
      height: 20px;
    }

    .pb-small .pb-value{
        background: url('images/progress_bar_small.png') 0 0 repeat-y;
        height: 100%;
     }
     .pb-small .pb-hedef {
       display: none;
     }

     .pb-small .pb-toplanan,
     .pb-small .pb-hedef{
       line-height: 26px;
     }


    /*
    ** Widgets
    */
    .widget{
      width:100%;
      margin-bottom: 30px;

      /* Shadow */
      -moz-box-shadow: 0 0 5px 2px #2b4b6c;
      -webkit-box-shadow:  0 0 5px 2px #2b4b6c;
      box-shadow: 0 0 5px 2px #2b4b6c;

      /* Rounded  Corners */
      -webkit-border-radius: 5px;
      -khtml-border-radius: 5px;
      -moz-border-radius: 5px;
      border-radius: 5px;
    }

    .widget-light{
      background: #FFF;
    }

    .widget-blue{
      background: #067dc2 url('images/widget_blue_background.png') repeat-x;
      color: #FFF;
    }

    .widget-dark{
      background-color: #2b4b6c;
      border: 1px solid #69748b;
      color: #FFF;

      /* inset shadow */
      -moz-box-shadow: inset 0 0 5px 5px #274461;
      -webkit-box-shadow:  inset 0 0 5px 5px #274461;
      box-shadow:  inset 0 0 5px 5px #274461;
    }

    .w-inner{
      padding:20px;}

    .w-title{
      font-size:18px;
      line-height:18px;
      padding-bottom:10px;
      margin-bottom:20px;
      font-weight:bold;
      border-bottom: 1px solid #69748b;
      color: #2a4a6a;
    }
    #main-content .w-title{
      font-size:20px;
      line-height: 22px;}

    .widget li {
        margin-bottom: 10px;
    }


    /*
    ** Widget Customizations
    */

    .widget-liste blockquote {
        line-height: 1.5;
        margin-bottom: 10px;
    }
    .widget-liste blockquotespan.quotation {
        color: #CCCCCC;
        font-family: Georgia;
        font-size: 32px;
        line-height: 12px;
        vertical-align: bottom;
    }
    .bagis-miktari {
        color: #CCCCCC;
        float: right;
        font-size: 24px;
        font-weight: bold;
        margin-left: 20px;
        font-family: Georgia, serif;
    }
    .bagis-miktari span {
        font-size: 18px;
    }

    .bagisci {
        font-style: italic;
        text-transform: capitalize;
        margin: 10px 0;
    }

    .bagis-tarihi{
        color: #CCC;
    }

    .more-link {
        cursor: pointer;
    }

    .widget-aktif-bagis p {
        margin-bottom: 5px;
    }


    .widget-form{
      width:632px;
      margin:40px auto;

    }
    .widget-form .w-title{ font-size:24px; line-height:32px; margin-bottom:40px;}
    .widget-form .button{ }

    .widget-form .actions {
      margin: -20px 0 20px;
      padding-left: 120px;
    }

    #widget-giris{}

    .widget-blue .w-title{
      border-bottom:1px solid #0C7AB9;
      color:#FFFFFF;
      font-size:18px;
      font-weight:bold;
      line-height:22px;
      margin-bottom:20px;
      padding-bottom:10px;
      text-align:center;
      text-shadow:0 1px 0 #2A4A6A;
    }

    #w-iletisim textarea{
        width: 370px;
    }

    /*
    ** En cok bagis toplayanlar
    */
    .w-top-fundraisers{

    }



    /* Login Registration Form Links */
    .form-links{

    }

    .form-links a{
      margin-right: 10px;
      padding-right: 10px;
      border-right: 1px solid #EEE;
    }

    /* Newsletter */
    #w-newsletter{

    }

    #w-newsletter .w-title{
        color: #FFF;
    }

    #w-newsletter form{
        width: 248px;
    }

    #w-newsletter label{
        font-size: 12px;
        margin-bottom: 5px;
        display: block;
    }

    #w-newsletter input{
        width: 248px;
        display: block;
        margin-bottom: 5px;
    }

    #w-newsletter #mc-embedded-subscribe{
        width: 100px;
        margin: 0;
    }

    #w-newsletter .w-footer{
        margin-top: 15px;
        display: block;
    }
/* ... */

